<resources>
    <string name="app_name">Where Are They?</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>

    <string name="hint_height">Height</string>
    <string name="hint_complexion">Complexion</string>
    <string name="hint_description">Enter Full Description</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_last_seen">Last Seen On e.g. January 1, 2017</string>
    <string name="hint_vicinity">In the Vicinity of&#8230;</string>

    <string name="age">Age:</string>

    <string name="btn_add">Add</string>

    <string-array name="complexion_array">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="heights_array">
        <item>4ft 0in = 121.92 cm</item>
        <item>4ft 1in = 124.46 cm</item>
        <item>4ft 2in = 127 cm</item>
        <item>4ft 3in = 129.54 cm</item>
        <item>4ft 4in = 132.08 cm</item>
        <item>4ft 5in = 134.62 cm</item>
        <item>4ft 6in = 137.16 cm</item>
        <item>4ft 7in = 139.70 cm</item>
        <item>4ft 8in = 142.24 cm</item>
        <item>4ft 9in = 144.78 cm</item>
        <item>4ft 10in = 147.32 cm</item>
        <item>4ft 11in = 149.86 cm</item>
        <item>5ft 0in = 152.40 cm</item>
        <item>5ft 1in = 154.94 cm</item>
        <item>5ft 2in = 157.48 cm</item>
        <item>5ft 3in = 160.02 cm</item>
        <item>5ft 4in = 162.56 cm</item>
        <item>5ft 5in = 165.10 cm</item>
        <item>5ft 6in = 167.64 cm</item>
        <item>5ft 7in = 170.18 cm</item>
        <item>5ft 8in = 172.72 cm</item>
        <item>5ft 9in = 175.26 cm</item>
        <item>5ft 10in = 177.80 cm</item>
        <item>5ft 11in = 180.34 cm</item>
        <item>6ft 0in = 182.88 cm</item>
        <item>6ft 1in = 185.42 cm</item>
        <item>6ft 2in = 187.96 cm</item>
        <item>6ft 3in = 190.50 cm</item>
        <item>6ft 4in = 193.04 cm</item>
        <item>6ft 5in = 195.58 cm</item>
        <item>6ft 6in = 198.12 cm</item>
        <item>6ft 7in = 200.66 cm</item>
        <item>6ft 8in = 203.20 cm</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
